<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.uac.UnprotectedAndroidComponentsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/uac_desc"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_launch_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/uac_launch_activity"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_custom_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/uac_custom_url"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_download_invoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/uac_download_invoice"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_receiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uac_broadcast"
            android:textAllCaps="false" />

    </LinearLayout>
</ScrollView>
