<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_uac">

    <fragment
        android:id="@+id/nav_uac"
        android:name="dev.xbara0x.androgoatpoc.ui.uac.UnprotectedAndroidComponentsFragment"
        android:label="@string/menu_uac"
        tools:layout="@layout/fragment_uac" />

    <fragment
        android:id="@+id/nav_ids"
        android:name="dev.xbara0x.androgoatpoc.ui.ids.InsecureDataStorageFragment"
        android:label="@string/menu_ids"
        tools:layout="@layout/fragment_ids" />

    <fragment
        android:id="@+id/nav_provider"
        android:name="dev.xbara0x.androgoatpoc.ui.provider.ProviderLeakFragment"
        android:label="@string/menu_provider"
        tools:layout="@layout/fragment_provider" />

</navigation>